these are the html pages

--- a/webserver/templates/anotherfile.html
+++ b/webserver/templates/anotherfile.html
@@ -1,1 +1,10 @@
-hello, I am another file!
+
+<body>
+  <h1>Welcome to New York Attractions! Here's a list of attractions around you</h1>
+  <div>{{data}}</div>
+  <div>
+    {% for n in data %}
+    <div>{{n}}</div>
+    {% endfor %}
+  </div>
+</body>
