--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -6,21 +6,12 @@
     }
   </style>
 
-
 <body>
-  <h1>Some famous Computer Scientists</h1>
-  <div>{{data}}</div>
+<h1>Welcome to NY Attractions! Please enter your username to continue, or make a username</h1>
+<p><a href="/another">Click here to see a complete list of attractions in your area</a></p>
 
-  <div>
-    {% for n in data %}
-    <div>{{n}}</div>
-    {% endfor %}
-  </div>
-
-<p><a href="/another">Go to the other page</a></p>
-
-<form method="POST" action="/add">
-<p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
+<form method="POST" action="/login">
+<p>Username: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form>
 
 </body>
