--- a/webserver/templates/anotherfile.html
+++ b/webserver/templates/anotherfile.html
@@ -7,4 +7,8 @@
     <div>{{n}}</div>
     {% endfor %}
   </div>
+  <h3>add a location!</h3>
+  <form method="POST" action="/submitlocation">
+  <p>name of location: <input type="text" name="nameoflocation"> <input type="submit" value="Add"></p>
+  </form>
 </body>
