--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -9,9 +9,9 @@
 <body>
 <h1>Welcome to NY Attractions! Please enter your username to continue, or make a username</h1>
 <p><a href="/another">Click here to see a complete list of attractions in your area</a></p>
-
+<p><a href="/exploreusers">Click here to lookup jnformation for a user</a></p>
 <form method="POST" action="/login">
-<p>Username: <input type="text" name="name"> <input type="submit" value="Add"></p>
+<p>Username: <input type="text" name="name"> <input type="submit" value="Login"></p>
 </form>
 
 </body>
