--- a/webserver/templates/usererror.html
+++ b/webserver/templates/usererror.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p>that isnt a username in our database! click back and try again, or just write your username here</p>
+<p>That isnt a username in our database! Click back and try again, or just write your username here to create an account.</p>
 <form method="POST" action="/adduser">
 <p>Add username: <input type="text" name="uname"> <input type="submit" value="AddUser"></p>
 </form>
