--- a/webserver/templates/userpage.html
+++ b/webserver/templates/userpage.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-<h1> Enter a userid to get the associated data with that user </h1>
-<h3> Note this must be an integer </h3>
+<h1> Enter a username to get the associated data with that user </h1>
 <form method="POST" action="/checkuser">
-<p>Check uid: <input type="text" name="uid"> <input type="submit" value="Check User"></p>
+<p>Check username: <input type="text" name="uname"> <input type="submit" value="Check User"></p>
 </form>
+
 </body>
 </html>
