--- a/webserver/templates/review.html
+++ b/webserver/templates/review.html
@@ -7,7 +7,7 @@
     {% endfor %}
   </div>
  <h2> search for reviews </h2>
- <p><a href="/reviewsearch.html">Write or read reviews</a></p>
+ <p><a href="/templates/reviewsearch.html">Write or read reviews</a></p>
  <h2> write below to add your own review</h2>
  <form method="POST" action="/writereview"><div>
  	<input type="text" name="locname" placeholder="Location Name"></div>
