--- a/webserver/templates/reviewpage.html
+++ b/webserver/templates/reviewpage.html
@@ -24,9 +24,9 @@
 {% endfor %}
 </div>
 <p><a href="/review">Write or read reviews</a></p>
-<p><a href="/templates/searchlocation.html">Search through attractions</a></p>
+<p><a href="/sl">Search through attractions</a></p>
 <p><a href="/exploreusers">Search for a user</a></p>
-<p><a href="/templates/prefs.html">Add preferences</a></p>
+<p><a href="/pf">Add preferences</a></p>
 <p><a href="/another">Add a new location</a></p>
 <button action='/logout'>Logout</button>
 
