--- a/webserver/templates/review.html
+++ b/webserver/templates/review.html
@@ -11,7 +11,7 @@
  <h2> write below to add your own review</h2>
  <form method="POST" action="/writereview"><div>
  	<input type="text" name="locname" placeholder="Location Name"></div>
- <p>Review: <input type="text" name="thereview"> <input type="number" name="rate" placeholder="rating"><div>Optional: <input type="text" name="lat" placeholder="latitude"> <input type="text" name="long" placeholder="longitude"></div><input type="submit" value="Add"></p>
+ <p>Review: <input type="text" name="thereview"><div>Rating:<input type="number" name="rate"></div><div>Optional:<div> Latitude, Longitude: <input type="number" step="any" name="lat" > <input type="number" step="any" name="long"></div></div><input type="submit" value="Add"></p>
  </form>
 </body>
 </html>
