--- a/webserver/templates/reviewpage.html
+++ b/webserver/templates/reviewpage.html
@@ -23,11 +23,11 @@
 <div>{{n}}</div>
 {% endfor %}
 </div>
-<p><a href="/review">Write or read reviews</a></p>
-<p><a href="/sl">Search through attractions</a></p>
-<p><a href="/exploreusers">Search for a user</a></p>
-<p><a href="/pf">Add preferences</a></p>
-<p><a href="/another">Add a new location</a></p>
+<p><a method="post" href="/review">Write or read reviews</a></p>
+<p><a method="post" href="/sl">Search through attractions</a></p>
+<p><a method="post" href="/exploreusers">Search for a user</a></p>
+<p><a method="post" href="/pf">Add preferences</a></p>
+<p><a method="post" href="/another">Add a new location</a></p>
 <button action='/logout'>Logout</button>
 
 </body>
