--- a/webserver/templates/prefs.html
+++ b/webserver/templates/prefs.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <form method="POST" action="/prefs">
-<p>Add preference: <input type="text" name='type' placeholder="Type of Attraction"> <div> <input type="text" name='cuisine' placeholder="Type of Food (if restaurant)"> <input type="submit" value="Add preference"></p>
+<p>Add preference: <input type="text" name='type' placeholder="Type of Attraction"> <div> <input type="text" name='cuisine' placeholder="Type of Food (if restaurant)"> </div><input type="submit" value="Add preference"></p>
 </form>
 </body>
 </html> 
