--- a/webserver/templates/reviewpage.html
+++ b/webserver/templates/reviewpage.html
@@ -27,8 +27,10 @@
 <p><a method="post" href="/sl">Search through attractions</a></p>
 <p><a method="post" href="/exploreusers">Search for a user</a></p>
 <p><a method="post" href="/pf">Add preferences</a></p>
+<p><a method="post" href="/history">Enter your travel history</a></p>
+<p><a method="post" href="/wl">Wishlist/Reservations</a></p>
 <p><a method="post" href="/another">Add a new location</a></p>
-<button action='/logout'>Logout</button>
+<button method="post" type="button" onclick='/logout'>Logout</button>
 
 </body>
 </html>
